src/snapshots/jsonptr__assign__json__tests__run-11.snap
---
source: src/assign.rs
description: asserting that the replaced json data returned from the assignment is as expected
info:
  data:
    foo:
      - bar: baz
      - bar: qux
  ptr: /foo/-/bar
  assign: quux
---
Ok(
    None,
)
