src/snapshots/jsonptr__assign__json__tests__run-15.snap
---
source: src/assign.rs
description: asserting that the replaced json data returned from the assignment is as expected
info:
  data:
    foo:
      - bar: baz
      - bar: qux
      - bar: quux
  ptr: /foo/0/bar
  assign: grault
---
Ok(
    Some(
        String("baz"),
    ),
)
