src/snapshots/jsonptr__assign__json__tests__run-16.snap
---
source: src/assign.rs
description: asserting that the replaced json data returned from the assignment is as expected
info:
  data:
    foo: bar
  ptr: /foo/bar
  assign: baz
---
Ok(
    Some(
        String("bar"),
    ),
)
