src/snapshots/jsonptr__assign__json__tests__run-19.snap
---
source: src/assign.rs
description: asserting that the json data is as expected after assignment
info:
  data: {}
  ptr: /-
  assign: foo
---
{"-":"foo"}
